# petridish_simulation

./: .gitignore  .gitignore.save  IMPROVEMENTS.md  JOURNAL.md  README.md  REPONSES.md  ignore.gitignore
partie1/src/: CMakeLists.txt
partie1/src/JSON/: JSONImpl.cpp
partie1/src/Lab/: CircularBody.cpp  CircularBody.hpp
partie1/src/Random/: Random.hpp
partie1/src/Utility/: Constants.hpp  Utility.cpp
partie2/src/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeLists.txt.user.26e7ef5
partie2/src/JSON/: JSONSerialiser.cpp
partie2/src/Lab/: Bacterium.cpp  Bacterium.hpp  CircularBody.cpp  CircularBody.hpp  Lab.cpp  Lab.hpp  Nutriment.cpp  Nutriment.hpp  bacterium.cpp  lab.cpp  nutriment.h  petridish.cpp  petridish.hpp
partie2/src/Tests/GraphicalTests/: NutrimentTest.cpp
partie2/src/Tests/UnitTests/: Vec2dTest.cpp
partie2/src/Utility/: Types.hpp  Utility.hpp  Vec2d.hpp
partie3/res/: app.json  bact_help_step3.txt  default_help.txt  nutriment_help.txt
partie3/src/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeLists.txt.user.69a021d  CMakeLists.txt.user.ca56312  Config.cpp
partie3/src/JSON/: JSON.cpp
partie3/src/Lab/: Bacterium.cpp  Bacterium.hpp  CircularBody.cpp  CircularBody.hpp  Lab.cpp  Lab.hpp  Nutriment.cpp  Nutriment.hpp  NutrimentA.cpp  NutrimentA.hpp  NutrimentB.cpp  NutrimentB.hpp  NutrimentGenerator.cpp  NutrimentGenerator.hpp  Petridish.cpp  Petridish.hpp  SimpleBacterium.cpp  SimpleBacterium.hpp  petridish.cpp  petridish.hpp
partie3/src/Random/: RandomGenerator.cpp
partie3/src/Tests/GraphicalTests/: NutrimentTest.cpp  SimpleBacteriaTest.cpp
partie3/src/Tests/UnitTests/: CircularBodyTest.cpp  Vec2dTest.cpp
partie3/src/Utility/: DiffEqSolver.cpp  MutableColor.hpp  MutableNumber.cpp  MutableNumber.hpp  Utility.cpp  Utility.tpp
partie4/: JOURNAL.md  REPONSES.md  SCIPER
partie4/res/: app.json  app.orig.json  help.txt  nutriment_help_step2.txt  nutriment_help_step3.txt
partie4/src/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeLists.txt.user.042482a  CMakeLists.txt.user.0f4eedc  CMakeLists.txt.user.3b247f0  CMakeLists.txt.user.83d2bfd  CMakeLists.txt.user.bf87acc  Config.hpp
partie4/src/Lab/: Bacterium.cpp  Bacterium.hpp  CircularBody.cpp  Grip.cpp  Grip.hpp  Lab.cpp  Lab.hpp  Nutriment.cpp  Nutriment.hpp  NutrimentA.cpp  NutrimentA.hpp  NutrimentB.cpp  NutrimentGenerator.cpp  Petridish.cpp  Petridish.hpp  SimpleBacterium.cpp  SimpleBacterium.hpp  Swarm.cpp  Swarm.hpp  SwarmBacterium.cpp  SwarmBacterium.hpp  TwitchingBacterium.cpp  TwitchingBacterium.hpp
partie4/src/Random/: Random.cpp
partie4/src/Tests/GraphicalTests/: NutrimentTest.cpp  SwarmBacteriaTest.cpp  TwitchingBacteriaTest.cpp
partie4/src/Tests/UnitTests/: MutablePropertyTest.cpp
partie4/src/Utility/: MutableColor.cpp  Utility.cpp
partie5/res/: app.json  help.txt  map.json
partie5/src/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp
partie5/src/Lab/: Bacterium.cpp  Bacterium.hpp  CircularBody.cpp  CircularBody.hpp  Grip.hpp  Lab.cpp  Lab.hpp  Nutriment.cpp  Nutriment.hpp  NutrimentA.cpp  NutrimentA.hpp  NutrimentB.cpp  NutrimentB.hpp  NutrimentGenerator.cpp  NutrimentGenerator.hpp  Petridish.cpp  Petridish.hpp  SimpleBacterium.cpp  SimpleBacterium.hpp  Swarm.cpp  Swarm.hpp  SwarmBacterium.cpp  SwarmBacterium.hpp  TwitchingBacterium.cpp  TwitchingBacterium.hpp
partie5/src/Stats/: Graph.cpp  Stats.cpp  Stats.hpp
partie5/src/Tests/GraphicalTests/: BacteriaTest.cpp  FinalApplication.cpp  FinalApplication.hpp  TwitchingBacteriaTest.cpp
partie5/src/Tests/UnitTests/: MutablePropertyTest.cpp
partie5/src/Utility/: MutableColor.cpp  MutableNumber.cpp  MutableNumber.hpp
partie6/res/: app.json  grip_help_step4.txt  help.txt  simple_bact_help.txt  swarm_help_step4.txt  twitching_help_step4.txt
partie6/src/: Application.cpp  Application.hpp  CMakeLists.txt  CMakeLists.txt.user.02ab97f  CMakeLists.txt.user.551cf54  CMakeLists.txt.user.5b54b20  CMakeLists.txt.user.7f29ea5  CMakeLists.txt.user.92883d4  CMakeLists.txt.user.d48174e  Config.cpp
partie6/src/JSON/: JSON.cpp
partie6/src/Lab/: Bacteriophage.cpp  Bacteriophage.hpp  Bacterium.cpp  Bacterium.hpp  CircularBody.hpp  Grip.cpp  Grip.hpp  Lab.cpp  Lab.hpp  Nutriment.cpp  Nutriment.hpp  NutrimentA.cpp  NutrimentA.hpp  NutrimentB.cpp  NutrimentB.hpp  NutrimentGenerator.cpp  NutrimentGenerator.hpp  Petridish.cpp  Petridish.hpp  SimpleBacterium.cpp  SimpleBacterium.hpp  Swarm.cpp  Swarm.hpp  SwarmBacterium.cpp  SwarmBacterium.hpp  TwitchingBacterium.cpp  TwitchingBacterium.hpp
partie6/src/Random/: RandomGenerator.hpp
partie6/src/Stats/: Graph.cpp  Graph.hpp  Stats.cpp  Stats.hpp
partie6/src/Tests/GraphicalTests/: BacteriaTest.cpp  FinalApplication.cpp  FinalApplication.hpp  GripTest.cpp  SwarmBacteriaTest.cpp
partie6/src/Tests/UnitTests/: CatchTests.cpp  CircularBodyTest.cpp
partie6/src/Utility/: Constants.hpp  DiffEqSolver.cpp  DiffEqSolver.hpp  MutableColor.cpp  MutableColor.hpp  MutableNumber.cpp  MutableNumber.hpp  Types.hpp  Vec2d.cpp
